[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Connect.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Journal.gd" type="Script" id=4]

[sub_resource type="GDScript" id=6]
script/source = "extends Button

signal connect_command(hostname, port)

onready var host_input: LineEdit = get_parent().get_child(0).get_child(1)
onready var port_input: LineEdit = get_parent().get_child(0).get_child(3)

onready var dialog: WindowDialog = get_parent().get_parent()

func _on_Confirm_pressed() -> void:
    emit_signal(\"connect_command\", host_input.text, port_input.text)
    dialog.hide()
"

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.878431, 0, 0, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="GDScript" id=8]
script/source = "extends Button

func set_online() -> void:
    self[\"custom_styles/disabled\"].bg_color = Color.green


func set_offline() -> void:
    self[\"custom_styles/disabled\"].bg_color = Color.red
"

[sub_resource type="StyleBoxFlat" id=5]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="GDScript" id=9]
script/source = "extends Label


func _ready():
    add_color_override(\"font_color\", Color.black)
    self[\"custom_styles/normal\"].bg_color = Color.gray

"

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1200.0
margin_bottom = 20.0

[node name="Connect" type="Button" parent="VBoxContainer/Toolbar"]
margin_right = 64.0
margin_bottom = 20.0
text = "Connect"
flat = true
script = ExtResource( 2 )

[node name="ConnectDialog" type="WindowDialog" parent="VBoxContainer/Toolbar"]
margin_left = 68.0
margin_right = 468.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
popup_exclusive = true
window_title = "Connection Dialog"
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Toolbar/ConnectDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer"]
margin_right = 400.0
margin_bottom = 176.0
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hostname" type="Label" parent="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer/GridContainer"]
margin_top = 6.0
margin_right = 198.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Master node hostname:"

[node name="HostInput" type="LineEdit" parent="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer/GridContainer"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "localhost"
clear_button_enabled = true

[node name="Port" type="Label" parent="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 198.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Master node port:"

[node name="PortInput" type="LineEdit" parent="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer/GridContainer"]
margin_left = 202.0
margin_top = 30.0
margin_right = 400.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "8080"
clear_button_enabled = true

[node name="Confirm" type="Button" parent="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer"]
margin_top = 180.0
margin_right = 400.0
margin_bottom = 200.0
text = "Confirm"
script = SubResource( 6 )

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Toolbar"]
margin_left = 68.0
margin_right = 72.0
margin_bottom = 20.0

[node name="ConnectedIcon" type="Button" parent="VBoxContainer/Toolbar"]
margin_left = 76.0
margin_right = 96.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
custom_styles/disabled = SubResource( 7 )
disabled = true
enabled_focus_mode = 0
script = SubResource( 8 )

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/Toolbar"]
margin_left = 100.0
margin_right = 104.0
margin_bottom = 20.0

[node name="ClusterStatus" type="Label" parent="VBoxContainer/Toolbar"]
margin_left = 108.0
margin_top = 3.0
margin_right = 261.0
margin_bottom = 17.0
text = "Cluster status: unknown"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1200.0
margin_bottom = 28.0

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 1200.0
margin_bottom = 800.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VSplitContainer"]
margin_right = 1200.0
margin_bottom = 570.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClusterView" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/HBoxContainer"]
margin_right = 792.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MasterNode" type="Label" parent="VBoxContainer/VSplitContainer/HBoxContainer/ClusterView"]
margin_left = 321.0
margin_right = 471.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 75 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/normal = SubResource( 5 )
text = "MASTER"
align = 1
valign = 1
script = SubResource( 9 )

[node name="WorkersContainer" type="GridContainer" parent="VBoxContainer/VSplitContainer/HBoxContainer/ClusterView"]
margin_top = 79.0
margin_right = 792.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/VSplitContainer/HBoxContainer"]
margin_left = 796.0
margin_right = 800.0
margin_bottom = 570.0

[node name="ControlPanel" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/HBoxContainer"]
margin_left = 804.0
margin_right = 1200.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="VBoxContainer/VSplitContainer/HBoxContainer/ControlPanel"]
margin_right = 396.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
disabled = true
text = "START"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VSplitContainer/HBoxContainer/ControlPanel"]
margin_top = 79.0
margin_right = 396.0
margin_bottom = 129.0

[node name="Pause" type="Button" parent="VBoxContainer/VSplitContainer/HBoxContainer/ControlPanel/HBoxContainer"]
margin_right = 196.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
disabled = true
text = "Pause"

[node name="Stop" type="Button" parent="VBoxContainer/VSplitContainer/HBoxContainer/ControlPanel/HBoxContainer"]
margin_left = 200.0
margin_right = 396.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
disabled = true
text = "STOP"

[node name="Journal" type="TextEdit" parent="VBoxContainer/VSplitContainer"]
margin_top = 582.0
margin_right = 1200.0
margin_bottom = 768.0
size_flags_vertical = 3
readonly = true
virtual_keyboard_enabled = false
caret_moving_by_right_click = false
script = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/Toolbar/Connect" to="VBoxContainer/Toolbar/Connect" method="_on_Connect_pressed"]
[connection signal="connect_command" from="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer/Confirm" to="." method="_on_connect_command"]
[connection signal="pressed" from="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer/Confirm" to="VBoxContainer/Toolbar/ConnectDialog/VBoxContainer/Confirm" method="_on_Confirm_pressed"]
